src/css/style_mosaico_tools.less
/* ... */
.mo-standalone #main-toolbox #tooltabs.ui-tabs > .ui-tabs-nav {
  padding-left: 40px;
}

/****************************************************************************************************************************
 * IMAGES GALLERY
 ***************************************************************************************************************************/

#toolimagesgallery {
  padding: 10px;
}

@keyframes slideright {
  0% { left: -(@leftsidebar-width+50px) }
  100% { left: 0 }
}
@keyframes slideleft {
  0% { left: 0 }
  100% { left: -(@leftsidebar-width+50px) }
}

#toolimages {
  .pane {
    text-align: center;
  }
  .loadbutton, .galleryPager {
    margin: .5em;
  }
}
.slidebar {
  z-index: 200;
  position: absolute;
  top: 0;
  width: @leftsidebar-width - 3px;
  left: 0;
  animation: slideright .2s ease-out 0s 1;
  border-radius: 0;
  background-color: @mosaico-background-color;
  box-shadow: 1px 0px 3px @mosaico-shadow-color;
  
  .close {
    float: right;
    visibility: hidden;
    cursor: pointer;
    width: 24px;
    display: block;

    &:before {
      visibility: visible;
      font-size: 24px;
      font-family: FontAwesome;
      content: '\f00d';
      position: relative;
      top: 0px;
      right: 0px;
      width: 24px;
      height: 24px;
    }
  }
  
  .pane {
    background-color: @mosaico-background-color;
    border-radius: 5px;
    margin: 5px;
    padding: 5px;
  }
  .pane-title {
    padding: 5px;
    display: block;
  }
  
}

.slidebar.hidden {
  left: -(@leftsidebar-width+50px);
  animation: slideleft .2s ease-out 0s 1;
}

#toolimagestab {
  padding: 0.2em;
  
  ul.ui-tabs-nav {
    padding: 0;
  }
  li.ui-state-active a {
    background: none repeat scroll 0% 0% #FFF;
  }
  .ui-tabs-panel {
    display: block;
    margin-top: 0;
    // max padding to avoid breaking the gallery
    padding: 15px 18px;
    background: none repeat scroll 0% 0% #FFF;
    border: 1px solid @mosaico-accent-color;
    border-width: 0px 1px 1px;
  }
}

/****************************************************************************************************************************
 * PREVIEW
 ***************************************************************************************************************************/

#main-preview {
  .button, .ui-button, .button_dropdown_split {
    margin-top: 0; margin-bottom: 0;
  }
}

#main-preview #preview-toolbar {
  padding: 3px 10px;
  text-align: center;
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 200;
}

#main-preview #frame-container {
  position: absolute;
  top: @topbar-height;
  bottom: 40px;
  left: 0;
  right: 0;
  background-color: @mosaico-background-color;
  box-shadow: inset 0px 0px 10px @mosaico-shadow-color;
}

#frame-container > iframe {
  
  border: 0;
  box-sizing: border-box;
  padding: 0 6px;

  width: 100%;
  height: 100%;
  overflow: auto;
  transform-origin: 0 0;
  transform: scale(1);

}

#frame-container.desktop > iframe {
  padding: 12px;

  width: 200%;
  height: 200%;
  transform: scale(0.5);
}

#frame-container.large > iframe {
  padding: 15px;
  
  width: 250%;
  height: 250%;
  transform: scale(0.4);
}

